--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,8 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './variables/colors';
+
 @import './example';
 @import './footer';
 @import './header';
