--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,4 @@
 <header>
   <h1 class="header-title">Hello world</h1>
-  <p class="lorem">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, repudiandae eius. Numquam nisi
-    vitae quis voluptas maiores aspernatur ipsa excepturi amet eaque, eligendi corporis, quae
-    debitis repellat, voluptatem commodi? Debitis!
-  </p>
+  <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, doloribus.</p>
 </header>
