Change name variables/colors to utils/colors

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './variables/colors';
+@import './utils/colors';
 
 @import './example';
-@import './footer';
-@import './header';
-@import './about';
+@import './layouts/footer';
+@import './layouts/header';
+@import './layouts/about';
