--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -12,7 +12,7 @@
   font-family: monospace;
   font-size: 16px;
   font-weight: 700;
-  background-color: #009688;
+  background-color: #e78a11;
   color: #fff;
   padding: 2px 6px;
   border-radius: 2px;
