--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,8 +7,16 @@
 @import './utils/colors';
 
 @import './layouts/header';
-@import './example';
+@import './layouts/mobile-menu';
+@import './layouts/mobile-menu-modal';
 @import './layouts/hero';
+@import './layouts/products';
+@import './layouts/about';
+@import './layouts/advantages';
+@import './layouts/gallery';
+@import './layouts/customer-reviews';
+@import './layouts/contacts';
+@import './example';
 @import './layouts/footer';
 
-@import './layouts/about';
+
