--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,5 @@
-<section>
-  <p class="par">Test228</p>
+<section class="about">
+  <span class="about__pre-title">tradition and love </span>
+  <h2 class="about__title">how it’s made?</h2>
+
 </section>
