--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,7 @@
 <header>
   <h1 class="header-title">Hello world</h1>
   <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, doloribus.</p>
+  <svg class="" width="50px" height="50px">
+    <use href="./images/icons.svg#icon-ice-cream"></use>
+  </svg>
 </header>
