--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './base/common';
 @import './base/reset';
 
 @import './utils/colors';
@@ -22,5 +23,3 @@
 @import './layouts/customer-reviews';
 @import './layouts/contacts';
 @import './layouts/footer';
-
-
