--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -49,12 +49,16 @@
   margin: 10px;
   // margin: 0 auto;
   font-size: 12px;
-  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   background-color: #fff;
   // &:not(:last-child) {
   //   margin-bottom: 20px;
   // }
+  &:hover,
+  &:focus {
+    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  }
+
   @media screen and (min-width: 768px) {
     font-size: 14px;
     padding: 50px 32px;
@@ -191,6 +195,10 @@
   text-decoration: none;
   line-height: 1.5;
   color: #907e82;
+  &:hover,
+  &:focus {
+    color: #000000;
+  }
   @media screen and (min-width: 768px) {
     line-height: 1.83;
   }
@@ -246,7 +254,7 @@
   background-color: #d41342;
 
   &:hover {
-    background-color: #d41342;
+    background-color: #c7133e;
   }
   @media screen and (min-width: 768px) {
     width: 191px;
