--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,7 @@
 <footer>
-    <div class="footer11111">
-
-    </div>
+  <div class="footer11111">
+    <p>homemade ice cream made</p>
+    <h2>with passion</h2>
+    <address>Feel free to contact <span class="footer--s">+61 (0) 383 766 284</span></address>
+  </div>
 </footer>
