--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,42 @@
-<footer>
-  <div class="footer11111">
-    <p>homemade ice cream made</p>
-    <h2>with passion</h2>
-    <address>Feel free to contact <span class="footer--s">+61 (0) 383 766 284</span></address>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__cont-wrapper">
+      <div class="footer__wrap">
+        <p class="footer__pre-title">homemade ice cream made</p>
+        <h2 class="footer__tile">with passion</h2>
+      </div>
+      <div class="footer__contacts">
+        <ul class="footer__list">
+          <li class="footer__link">
+            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+              <svg class="footer__svg" width="34" height="34">
+                <use href="./images/icons.svg#icon-github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__link">
+            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+              <svg class="footer__svg" width="34" height="34">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__link">
+            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+              <svg class="footer__svg" width="34" height="34">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="footer-wrap__phone">
+          <span class="footer__span">Feel free to contact</span>
+          <a class="footer__phone" href="tel:+610383766284">+61 (0) 383 766 284</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-rights">
+    <p class="footer-rights__content">&#169; 2019 - IceCream. All Rights Reserved.</p>
   </div>
 </footer>
