--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,25 +7,31 @@
         <h3 class="products-list__title">ICE CREAM</h3>
         <p class="products-list__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et
+          ut labore et<span class="products-list__cut">. dolore magna aliqua facilisis.</span>
         </p>
-        <button type="button" class="products-list__btn"></button>
+        <button type="button" class="products-list__btn">
+          <span class="arrow">&#10140;</span>
+        </button>
       </li>
       <li class="products-list__item products-list__item--orange">
         <h3 class="products-list__title">ICE COFFEE</h3>
         <p class="products-list__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et
+          ut labore et<span class="products-list__cut">. dolore magna aliqua facilisis.</span>
         </p>
-        <button type="button" class="products-list__btn"></button>
+        <button type="button" class="products-list__btn">
+          <span class="arrow">&#10140;</span>
+        </button>
       </li>
       <li class="products-list__item products-list__item--green">
         <h3 class="products-list__title">MILKSHAKES</h3>
         <p class="products-list__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et
+          ut labore et<span class="products-list__cut">. dolore magna aliqua facilisis.</span>
         </p>
-        <button type="button" class="products-list__btn"></button>
+        <button type="button" class="products-list__btn">
+          <span class="arrow">&#10140;</span>
+        </button>
       </li>
     </ul>
   </div>
