--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -3,6 +3,11 @@
   padding-bottom: 98px;
   background-color: var(--primary-white);
 
+  @media screen and (min-width: 768px) {
+    padding-top: 122px;
+    padding-bottom: 112px;
+  }
+
   &__label {
     margin-bottom: 15px;
     font-family: 'Titan One', Aileron, Comfortaa, sans-serif;
@@ -10,6 +15,11 @@
     line-height: 1.16;
     text-align: center;
     color: var(--secondary-color);
+
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.15;
+    }
   }
 
   &__title {
@@ -21,6 +31,11 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: var(--primary-text);
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 150px;
+      font-size: 48px;
+    }
   }
 }
 
@@ -29,14 +44,77 @@
   flex-direction: column;
   align-items: center;
 
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: center;
+  }
+
   &__item {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 160px 39px 39px 39    max-width: 280px;
-    //height: 485px;
-    background-color: #ffb8ca;
+    padding: 161px 39px 41px 41px;
+    max-width: 280px;
+    background-color: var(--bg-pink);
     border-radius: 24px;
+
+    @media screen and (min-width: 768px) {
+      padding: 152px 11px 40px 11px;
+      max-width: 220px;
+    }
+  }
+
+  &__item::before {
+    content: '';
+    position: absolute;
+    bottom: 348px;
+    display: block;
+    width: 249px;
+    height: 252px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/mobile/product-1-320@1x.png);
+
+    @media screen and (min-width: 768px) {
+      bottom: 355px;
+      width: 220px;
+      height: 226px;
+      background-image: url(../images/tablet/product-1-768@1x.png);
+    }
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    &__item::before {
+      background-image: url(../images/mobile/product-1-320@2x.png);
+    }
+  }
+
+  &__item--orange::before {
+    background-image: url(../images/mobile/product-2-320@1x.png);
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    &__item--orange::before {
+      background-image: url(../images/mobile/product-2-320@2x.png);
+    }
+  }
+
+  &__item--green::before {
+    background-image: url(../images/mobile/product-3-320@1x.png);
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    &__item--green::before {
+      background-image: url(../images/mobile/product-3-320@2x.png);
+    }
   }
 
   &__item--orange {
@@ -49,6 +127,10 @@
 
   &__item + &__item {
     margin-top: 130px;
+    @media screen and (min-width: 768px) {
+      margin-top: 0;
+      margin-left: 20px;
+    }
   }
 
   &__title {
@@ -61,6 +143,18 @@
     color: var(--primary-white);
   }
 
+  &__title::after {
+    content: '';
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 6px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(../images/dots.png);
+  }
+
   &__text {
     margin-bottom: 30px;
     font-weight: 700;
@@ -70,6 +164,16 @@
     letter-spacing: 0.04em;
 
     color: var(--primary-white);
+
+    @media screen and (min-width: 768px) {
+      line-height: 1.78;
+    }
+  }
+
+  &__cut {
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
   }
 
   &__btn {
@@ -77,5 +181,10 @@
     height: 40px;
     border-radius: 44px;
     border: transparent;
+    background-color: var(--primary-white);
   }
+}
+
+.arrow {
+  color: var(--accent);
 }
