--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -8,6 +8,11 @@
     padding-bottom: 112px;
   }
 
+  @media screen and (min-width: 1280px) {
+    padding-top: 127px;
+    padding-bottom: 119px;
+  }
+
   &__label {
     margin-bottom: 15px;
     font-family: 'Titan One', Aileron, Comfortaa, sans-serif;
@@ -19,6 +24,11 @@
     @media screen and (min-width: 768px) {
       font-size: 26px;
       line-height: 1.15;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+      line-height: 1.13;
     }
   }
 
@@ -35,6 +45,13 @@
     @media screen and (min-width: 768px) {
       margin-bottom: 150px;
       font-size: 48px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 259px;
+      font-size: 58px;
+      line-height: 1.13;
+      letter-spacing: 0.06em;
     }
   }
 }
@@ -63,6 +80,11 @@
       padding: 152px 11px 40px 11px;
       max-width: 220px;
     }
+
+    @media screen and (min-width: 1280px) {
+      padding: 163px 44px 50px 44px;
+      max-width: 335px;
+    }
   }
 
   &__item::before {
@@ -82,6 +104,25 @@
       width: 220px;
       height: 226px;
       background-image: url(../images/tablet/product-1-768@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/product-1-768@2x.png);
+      }
+    }
+
+    @media screen and (min-width: 1280px) {
+      bottom: 400px;
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/desktop/product-1-1200@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/desktop/product-1-1200@2x.png);
+      }
     }
   }
 
@@ -95,6 +136,29 @@
 
   &__item--orange::before {
     background-image: url(../images/mobile/product-2-320@1x.png);
+
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/tablet/product-2-768@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/product-2-768@2x.png);
+      }
+    }
+
+    @media screen and (min-width: 1280px) {
+      bottom: 400px;
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/desktop/product-2-1200@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/desktop/product-2-1200@2x.png);
+      }
+    }
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -107,6 +171,29 @@
 
   &__item--green::before {
     background-image: url(../images/mobile/product-3-320@1x.png);
+
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/tablet/product-3-768@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/tablet/product-3-768@2x.png);
+      }
+    }
+
+    @media screen and (min-width: 1280px) {
+      bottom: 400px;
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/desktop/product-3-1200@1x.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/mobile/product-3-320@2x.png);
+      }
+    }
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -127,9 +214,14 @@
 
   &__item + &__item {
     margin-top: 130px;
+
     @media screen and (min-width: 768px) {
       margin-top: 0;
       margin-left: 20px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      margin-left: 28px;
     }
   }
 
@@ -141,6 +233,11 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: var(--primary-white);
+
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+      line-height: 1.13;
+    }
   }
 
   &__title::after {
@@ -153,6 +250,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-image: url(../images/dots.png);
+
+    @media screen and (min-width: 1280px) {
+      margin-top: 32px;
+      margin-bottom: 32px;
+    }
   }
 
   &__text {
@@ -162,11 +264,16 @@
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.04em;
-
     color: var(--primary-white);
 
     @media screen and (min-width: 768px) {
       line-height: 1.78;
+    }
+
+    @media screen and (min-width: 1280px) {
+      font-size: 16px;
+      line-height: 1.75;
+      margin-bottom: 62px;
     }
   }
 
