--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,22 +7,22 @@
       </div>
       <div class="footer__contacts">
         <ul class="footer__list">
-          <li class="footer__link">
-            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+          <li class="footer__item">
+            <a class="footer__link" href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
               <svg class="footer__svg" width="34" height="34">
                 <use href="./images/icons.svg#icon-github"></use>
               </svg>
             </a>
           </li>
-          <li class="footer__link">
-            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+          <li class="footer__item">
+            <a class="footer__link" href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
               <svg class="footer__svg" width="34" height="34">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
-          <li class="footer__link">
-            <a href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
+          <li class="footer__item">
+            <a class="footer__link" href="https://i.pinimg.com/564x/7c/ce/30/7cce3030a7b2b9a6e2a41213b5547953.jpg">
               <svg class="footer__svg" width="34" height="34">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
