--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -2,7 +2,7 @@
   background-color: var(--primary-bg-pink);
   padding-top: 56px;
   @media screen and (min-width: 768px) {
-    padding-top: px;
+    padding-top: 79px;
   }
   @media screen and (min-width: 1280px) {
     padding-top: 83px;
@@ -10,8 +10,6 @@
 }
 .footer__pre-title {
   font-family: 'Titan One';
-  font-style: normal;
-  font-weight: 400;
   font-size: 18px;
   line-height: 1.16;
   letter-spacing: 0.04em;
@@ -32,8 +30,6 @@
 }
 .footer__tile {
   font-family: 'Titan One';
-  font-style: normal;
-  font-weight: 400;
   font-size: 34px;
   line-height: 1.14;
   letter-spacing: 0.04em;
@@ -87,23 +83,22 @@
   color: var(--secondary-text);
 }
 .footer__svg {
-  fill: #fea5bb;
+  fill: var(--secondary-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__svg:hover {
+.footer__link:hover svg,
+.footer__link:focus svg {
   fill: var(--primary-text);
 }
 .footer-rights {
   border-top: 1px solid #e1e1e1;
   text-align: center;
 
-  padding-top: 22px;
+  padding-top: 25px;
   padding-bottom: 25px;
-  @media screen and (min-width: 768px) {
-    padding-top: 29px;
-    padding-bottom: 18px;
-  }
   @media screen and (min-width: 1280px) {
-    padding-top: 9px;
+    padding-top: 10px;
     padding-bottom: 10px;
   }
 }
@@ -116,7 +111,7 @@
     margin-bottom: 50px;
   }
 }
-.footer__link:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-right: 28px;
   @media screen and (min-width: 768px) {
     margin-right: 30px;
