--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,12 +4,12 @@
     <ul class="contacts__list">
       <li class="contacts__item">
         <span class="contacts__name">Cafe</span>
-        <span class="contacts__city">Chicago</span>
+        <h3 class="contacts__city">Chicago</h3>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <div class="contacts__work-time">
-          <span class="contacts__days">Monday - Friday</span>
+          <p class="contacts__days">Monday - Friday</p>
           <span class="contacts__time contacts__time--apend">06:00 AM - 10:00 PM</span>
-          <span class="contacts__days">Saturday - Sunday</span>
+          <p class="contacts__days">Saturday - Sunday</p>
           <span class="contacts__time">08:00 AM - 16:00 PM</span>
         </div>
         <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284 </a>
@@ -17,12 +17,12 @@
       </li>
       <li class="contacts__item">
         <span class="contacts__name contacts__name--green">FOOD TRUCK</span>
-        <span class="contacts__city">Los Angeles</span>
+        <h3 class="contacts__city">Los Angeles</h3>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <div class="contacts__work-time">
-          <span class="contacts__days">Monday - Friday</span>
+          <p class="contacts__days">Monday - Friday</p>
           <span class="contacts__time contacts__time--apend">06:00 AM - 10:00 PM</span>
-          <span class="contacts__days">Saturday - Sunday</span>
+          <p class="contacts__days">Saturday - Sunday</p>
           <span class="contacts__time">08:00 AM - 16:00 PM</span>
         </div>
         <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284 </a>
@@ -30,13 +30,13 @@
       </li>
       <li class="contacts__item">
         <span class="contacts__name">Cafe</span>
-        <span class="contacts__city">New York</span>
+        <h3 class="contacts__city">New York</h3>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         <div class="contacts__work-time">
-          <span class="contacts__days">Monday - Friday</span>
+          <p class="contacts__days">Monday - Friday</p>
           <span class="contacts__time contacts__time--apend">06:00 AM - 10:00 PM</span>
-          <span class="contacts__days">Saturday - Sunday</span>
-          <span class="contacts__time">08:00` AM - 16:00 PM</span>
+          <p class="contacts__days">Saturday - Sunday</p>
+          <span class="contacts__time">08:00 AM - 16:00 PM</span>
         </div>
         <a class="contacts__link" href="tel:+610383766284">+61(0) 383 766 284 </a>
         <a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
