--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import './base/reset';
 
 @import './utils/colors';
+@import './utils/mixins';
 
 @import './components/container';
 @import './components/logo';
