--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  margin-top: 123px;
+  margin-bottom: 66px;
 
   @include mobile {
     max-width: 480px;
