changed-unicode-margin-border-radius

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <section class="products">
   <div class="container">
-    <p class="products__label">100% NATURAL</p>
+    <p class="products__label">100&#37 NATURAL</p>
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products-list">
       <li class="products-list__item">
