--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -221,7 +221,7 @@
     }
 
     @media screen and (min-width: 1280px) {
-      margin-left: 28px;
+      margin-left: 24px;
     }
   }
 
@@ -286,7 +286,7 @@
   &__btn {
     width: 40px;
     height: 40px;
-    border-radius: 44px;
+    border-radius: 50%;
     border: transparent;
     background-color: var(--primary-white);
   }
