--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -7,54 +7,90 @@
   @media screen and (min-width: 1280px) {
     padding-top: 83px;
   }
-}
-.footer__pre-title {
-  font-family: 'Titan One';
-  font-size: 18px;
-  line-height: 1.16;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: var(--secondary-color);
 
-  margin-bottom: 17px;
-  @media screen and (min-width: 768px) {
-    font-size: 26px;
-    line-height: 1.15;
+  &__pre-title {
+    font-family: 'Titan One';
+    font-size: 18px;
+    line-height: 1.16;
     letter-spacing: 0.04em;
-    width: 340px;
-    margin-bottom: 16px;
-  }
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 15px;
-  }
-}
-.footer__tile {
-  font-family: 'Titan One';
-  font-size: 34px;
-  line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: var(--primary-text);
+    text-transform: uppercase;
+    color: var(--secondary-color);
 
-  width: 200px;
-  margin-bottom: 43px;
-  @media screen and (min-width: 768px) {
-    font-size: 48px;
+    margin-bottom: 17px;
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.15;
+      letter-spacing: 0.04em;
+      width: 340px;
+      margin-bottom: 16px;
+    }
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 15px;
+    }
+  }
+  &__tile {
+    font-family: 'Titan One';
+    font-size: 34px;
     line-height: 1.14;
-    letter-spacing: 0.06em;
-    width: 340px;
-    margin-bottom: 91px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--primary-text);
+
+    width: 200px;
+    margin-bottom: 43px;
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      line-height: 1.14;
+      letter-spacing: 0.06em;
+      width: 340px;
+      margin-bottom: 91px;
+    }
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 97px;
+    }
   }
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 97px;
+  &__cont-wrapper {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
   }
-}
-.footer__cont-wrapper {
-  @media screen and (min-width: 768px) {
+
+  &__phone {
+    color: var(--primary-text);
+    text-decoration: none;
+    margin-left: 5px;
+  }
+
+  &__svg {
+    fill: var(--secondary-color);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__link:hover svg,
+  &__link:focus svg {
+    fill: var(--primary-text);
+  }
+
+  &__list {
     display: flex;
-    justify-content: space-between;
-    padding-left: 16px;
-    padding-right: 16px;
+    justify-content: flex-end;
+
+    margin-bottom: 46px;
+    @media screen and (min-width: 1280px) {
+      margin-bottom: 50px;
+    }
+  }
+  &__item:not(:last-child) {
+    margin-right: 28px;
+    @media screen and (min-width: 768px) {
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1280px) {
+      margin-right: 24px;
+    }
   }
 }
 .footer-wrap__phone {
@@ -71,26 +107,6 @@
     font-size: 14px;
   }
 }
-.footer__phone {
-  color: var(--primary-text);
-  text-decoration: none;
-  margin-left: 5px;
-}
-.footer-rights__content {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.52;
-  color: var(--secondary-text);
-}
-.footer__svg {
-  fill: var(--secondary-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__link:hover svg,
-.footer__link:focus svg {
-  fill: var(--primary-text);
-}
 .footer-rights {
   border-top: 1px solid #e1e1e1;
   text-align: center;
@@ -101,22 +117,10 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
-}
-.footer__list {
-  display: flex;
-  justify-content: flex-end;
-
-  margin-bottom: 46px;
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 50px;
-  }
-}
-.footer__item:not(:last-child) {
-  margin-right: 28px;
-  @media screen and (min-width: 768px) {
-    margin-right: 30px;
-  }
-  @media screen and (min-width: 1280px) {
-    margin-right: 24px;
+  &__content {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.52;
+    color: var(--secondary-text);
   }
 }
