--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -237,8 +237,7 @@
   border-radius: 22px;
   border: 0;
   cursor: pointer;
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: #ecebeb;
   }
 
@@ -254,8 +253,7 @@
   color: #ffffff;
   background-color: #d41342;
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: #c7133e;
   }
   @media screen and (min-width: 768px) {
