--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,6 +1,261 @@
-.header-title {
-  background-color: aqua;
+.header {
+  background: #ffb8ca;
+  position: relative;
 }
-.lorem {
-  color: red;
+
+.header__container {
+  position: relative;
+  background-image: url(../images/mobile/hero-icecream-320@1x.png),
+    url(../images/tablet/Ellipse-768@1x.png);
+  background-size: 170px, 345px;
+  background-repeat: no-repeat;
+  background-position: bottom 0px right 32px, bottom 75px right -50px;
+  height: 502px;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url(../images/mobile/hero-icecream-320@2x.png),
+      url(../images/tablet/Ellipse-768@2x.png);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(../images/tablet/hero-icecream-768@1x.png),
+      url(../images/tablet/hero-girl-768@1x.png), url(../images/tablet/Ellipse-768@1x.png),
+      url(../images/tablet/hero-milk-768@1x.png);
+    background-size: 143px, 168px, 323px, 124px;
+    background-position: bottom 0px right 247px, bottom 0px right 34px, bottom 45px right 137px,
+      bottom 28px left 34px;
+    height: 399px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/tablet/hero-icecream-768@2x.png),
+        url(../images/tablet/hero-girl-768@2x.png), url(../images/tablet/Ellipse-768@2x.png),
+        url(../images/tablet/hero-milk-768@2x.png);
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    height: 665px;
+    background-image: url(../images/desktop/hero-icecream-1200@1x.png),
+      url(../images/desktop/hero-girl-1200@1x.png), url(../images/desktop/Ellipse-1280@1x.png),
+      url(../images/desktop/hero-milk-1200@1x.png);
+    background-size: 236px, 293px, 538px, 188px;
+    background-position: bottom 0px right 450px, bottom 0px right 110px, bottom 76px right 268px,
+      bottom 46px left 76px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/desktop/hero-icecream-1200@2x.png),
+        url(../images/desktop/hero-girl-1200@2x.png), url(../images/desktop/Ellipse-1280@2x.png),
+        url(../images/desktop/hero-milk-1200@2x.png);
+    }
+  }
+}
+.header__logo {
+  padding-left: 20px;
+  padding-top: 6px;
+  @media screen and (min-width: 768px) {
+    padding: 0;
+    position: absolute;
+    top: 38px;
+    left: 34px;
+  }
+  @media screen and (min-width: 1280px) {
+    position: absolute;
+    top: 37px;
+    left: 46px;
+    width: 200px;
+    height: 50px;
+  }
+}
+.header__taitle {
+  display: block;
+  width: 220px;
+  padding-top: 140px;
+  font-family: Titan One;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+  @media screen and (min-width: 768px) {
+    width: 162px;
+    font-size: 22px;
+    line-height: 1.13;
+    padding-left: 14px;
+    padding-top: 102px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 277px;
+    font-size: 38px;
+    line-height: 1.13;
+    padding-left: 114px;
+    padding-top: 80px;
+  }
+}
+.header__taitle--emphasis {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 0.97;
+  text-transform: uppercase;
+  color: #d41443;
+
+  @media screen and (min-width: 768px) {
+    font-size: 34px;
+    line-height: 0.91;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 0.91;
+  }
+}
+.header__text {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    bottom: 35px;
+    left: 154px;
+    display: inline-block;
+    width: 114px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-size: 8px;
+    line-height: 1.5;
+    color: #ffffff;
+  }
+  @media screen and (min-width: 1280px) {
+    bottom: 57px;
+    left: 294px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+.header__btn {
+  margin-top: 7px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: transparent;
+  background-color: var(--primary-white);
+}
+.header__arrow {
+  color: var(--accent);
+}
+
+.header__element {
+  position: absolute;
+  z-index: 2;
+  top: 94px;
+  right: 34px;
+  display: block;
+  text-align: right;
+  @media screen and (min-width: 1280px) {
+    top: 160px;
+    right: 100px;
+  }
+
+  &:last-child {
+    top: 151px;
+    @media screen and (min-width: 1280px) {
+      top: 250px;
+    }
+  }
+}
+.header__number {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  font-family: Titan One;
+  font-size: 28px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #d41443;
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
+    line-height: 1.15;
+  }
+  &::before {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    display: block;
+    right: -7px;
+    bottom: 28px;
+    width: 16px;
+    height: 16px;
+    background-image: url(../images/ellipse-small@x2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    @media screen and (min-width: 1280px) {
+      width: 30px;
+      height: 30px;
+      right: -7px;
+      bottom: 28px;
+    }
+  }
+}
+.header__number--name {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  display: block;
+  font-family: 'DM Sans';
+  text-transform: lowercase;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 10px;
+  color: #ffffff;
+}
+
+.header__button--block {
+  @media screen and (min-width: 768px) {
+    padding-left: 14px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-left: 115px;
+  }
+}
+.header__button--first {
+  margin-top: 28px;
+  margin-right: 8px;
+  width: 63px;
+  height: 24px;
+  background: #d41443;
+  border-radius: 20px;
+  border: none;
+
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1.25;
+  color: #ffffff;
+  @media screen and (min-width: 1280px) {
+    width: 104px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+.header__button--second {
+  margin-top: 28px;
+  width: 82px;
+  height: 24px;
+  background: #ffffff;
+  border-radius: 20px;
+  border: none;
+
+  font-family: DM Sans;
+  font-size: 8px;
+  line-height: 1.25;
+  color: #d41443;
+  @media screen and (min-width: 1280px) {
+    width: 138px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
