--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -1,3 +1,234 @@
 .about {
-  background: #FFF5F6;
+  background: #fff5f6;
+  padding-top: 125px;
+  @media screen and (min-width: 768px) {
+    padding-top: 130px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 125px;
+  }
 }
+.about__container {
+  background-image: url('../images/mobile/background-1-320@1x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center 86%;
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url('../images/mobile/background-1-320@2x.png') no-repeat center 34%;
+  }
+  @media screen and (min-width: 768px) {
+    background-image: none;
+  }
+  @media screen and (min-width: 1280px) {
+    background-image: url('../images/desktop/sectionbg1200@1x.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center 89%;
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url('../images/desktop/sectionbg1200@2x.png') no-repeat center 34%;
+    }
+  }
+}
+
+.about__lable {
+  display: block;
+  font-family: Titan One;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
+
+  margin-bottom: 15px;
+  color: #ffa5ba;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
+.about__title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 39px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  margin-bottom: 26px;
+  color: #d41443;
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 55px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 66px;
+  }
+}
+.about__content {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: flex-start;
+  }
+  // @media screen and (min-width: 1280px) {
+  //   // background-image: url("../images/sectionbg320.png");
+  //   background-repeat: no-repeat;
+  //   background-size: contain;
+  //   background-position: center;
+  //   @media (min-device-pixel-ratio: 2),
+  //     (-webkit-min-device-pixel-ratio: 2),
+  //     (min-resolution: 192dpi),
+  //     (min-resolution: 2dppx) {
+  //     // .box {
+  //     //   // background-image: url("../images/sectionbg640.png");
+  //     // }
+  //   }
+  // @media (min-device-pixel-ratio: 3),
+  //   (-webkit-min-device-pixel-ratio: 3),
+  //   (min-resolution: 288dpi),
+  //   (min-resolution: 3dppx) {
+  //   // .box {
+  //   //   // background-image: url("../images/sectionbg960.png");
+  //   // }
+  // }
+}
+
+.about__picture {
+  margin-bottom: 46px;
+
+  @media screen and (min-width: 768px) {
+    // width: 340px;
+    // height: 340px;
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 550px;
+    height: 550px;
+    // padding-left: 114px;
+    // padding-right: 55px;
+  }
+}
+.about__blok {
+  padding-left: 30px;
+  padding-right: 30px;
+  @media screen and (min-width: 768px) {
+    width: 340px;
+    padding-left: 14px;
+    padding-right: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 463px;
+    padding-left: 74px;
+  }
+}
+
+.about__text {
+  display: block;
+  font-family: DM Sans;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  text-align: left;
+  margin-bottom: 30px;
+
+  color: #000000;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.76;
+    padding-top: 35px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+    letter-spacing: 0.04em;
+  }
+}
+.about__text--second {
+  display: block;
+  font-family: DM Sans;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  text-align: left;
+  margin-bottom: 17px;
+  color: #907e82;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+    margin-bottom: 62px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 14px;
+    // padding-right: 117px;
+    margin-bottom: 45px;
+  }
+}
+.about__botton {
+  display: inline-flex;
+  width: 176px;
+  height: 44px;
+  background: #ffffff;
+  border-radius: 22px;
+  border: none;
+
+  font-family: DM Sans;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+
+  justify-content: center;
+  align-items: center;
+  color: #d41443;
+  cursor: pointer;
+  &:hover {
+    background-color: #ecebeb;
+  }
+}
+.about__botton__icon {
+  margin-left: 12px;
+}
+//   margin-top: 28px;
+//   display: inline-flex;
+//   width: 176px;
+//   height: 44px;
+//   background: #ffffff;
+//   border-radius: 22px;
+//   border: none;
+
+//   font-family: DM Sans;
+//   font-weight: bold;
+//   font-size: 14px;
+//   line-height: 18px;
+
+//   justify-content: center;
+//   align-items: center;
+//   color: #d41443;
+
+//   &::after {
+//     position: center;
+//     content: '';
+//     width: 8px;
+//     height: 10px;
+//     margin-left: 10px;
+//     // background-image: url("../images/pnj/Vector\ 1.png");
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     align-items: center;
+//   }
+// }
