--- a/src/sass/layouts/_customer-reviews.scss
+++ b/src/sass/layouts/_customer-reviews.scss
@@ -1,9 +1,12 @@
+.reviews {
+  padding-top: 123px;
+  padding-bottom: 66px;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  margin-top: 123px;
-  margin-bottom: 66px;
 
   @include mobile {
     max-width: 480px;
