--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
     background-image: linear-gradient(#FFF5F6 40%, #FFFFFF 40%)
 }
-.galary__image {
+.gallery__image {
     display: flex;
     justify-content: center;
 }
