--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="gallery">
   <div class="container">
-    <picture class="galary__image" >
+    <picture class="gallery__image" >
       <source
         srcset="
           ./images/desktop/colage-desktop-1x.jpg 1x,
