add hover to phone

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -53,8 +53,6 @@
     @media screen and (min-width: 768px) {
       display: flex;
       justify-content: space-between;
-      padding-left: 16px;
-      padding-right: 16px;
     }
   }
 
@@ -62,6 +60,13 @@
     color: var(--primary-text);
     text-decoration: none;
     margin-left: 5px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__phone:hover,
+  &__phone:focus {
+    color: var(--bg-brown);
+    // text-shadow: 0px 8px 30px var(--bg-brown);
   }
 
   &__svg {
