--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="How">
+<section class="about" id="how">
   <div class="container about__container">
     <label class="about__lable">tradition and love</label>
     <h2 class="about__title">how it’s made?</h2>
@@ -19,7 +19,7 @@
           <!-- width="516" height="516"  -->
         </picture>
       </div>
-      <div class="about__blok">
+      <div class="about__block">
         <p class="about__text">
           Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
           lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
@@ -30,9 +30,9 @@
           maximus. Cras massa nibh, tincidunt. <br /><br />
           Aliquam erat volutpat. Aenean accumsan.
         </p>
-        <button class="about__botton" type="button">
+        <button class="about__button" type="button">
           Read more<svg
-            class="about__botton__icon"
+            class="about__button__icon"
             width="7"
             height="10"
             fill="none"
