Revert "Feature/advantages"

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,90 +1,7 @@
-<header class="header">
-  <div class="container header__container">
-    <nav class="header__menu" data-menu>
-      <button class="header__menu--button">
-        Buy now
-        <svg
-          class="btn-list__icon"
-          width="7"
-          height="10"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="m1.42 1 4.282 4L1.42 9"
-            stroke="#D41443"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
-      </button>
-      <ul class="header__nav">
-        <li><a class="header__list" href="">Home</a></li>
-        <li><a class="header__list" href="">About us</a></li>
-        <li><a class="header__list" href="#How">How it&#39;s made?</a></li>
-        <li><a class="header__list" href="">Our products</a></li>
-        <li><a class="header__list" href="">Contact</a></li>
-      </ul>
-    </nav>
-    <button type="button" class="header__button is-open" aria-expanded="false" data-header__button>
-      <svg width="20" height="20" aria-label="mobil menu ">
-        <use class="header__icon--cross" href="./images/icons.svg#icon-cross"></use>
-        <use class="header__icon--menu" href="./images/icons.svg#icon-burger"></use>
-      </svg>
-    </button>
-    <button class="header__nav--button">
-      Buy now
-      <svg
-        class="btn-list__icon"
-        width="7"
-        height="10"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="m1.42 1 4.282 4L1.42 9"
-          stroke="#D41443"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-    </button>
-    <!-- <a href="./hero.html">
-        <img
-          class="header__logo"
-          src="./images/logo.png"
-          alt="logo"
-          width="200"
-        />
-      </a> -->
-    <h2 class="header__taitle">
-      ice cream made with
-      <span class="header__taitle--emphasis">passion</span>
-    </h2>
-    <div class="header__button--block">
-      <button class="header__button--first" href="">Products</button>
-      <button href="#How" class="header__button--second">How it&#39;s made?</button>
-    </div>
-    <p class="header__text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-      labore et
-      <br />
-      <button type="button" class="header__btn">
-        <span class="header__arrow">&#10140;</span>
-      </button>
-    </p>
-
-    <ul>
-      <li class="header__element">
-        <p class="header__number">16</p>
-        <p class="header__number--name">cafes</p>
-      </li>
-      <li class="header__element">
-        <p class="header__number">23</p>
-        <p class="header__number--name">food trucks</p>
-      </li>
-    </ul>
-  </div>
+<header>
+  <h1 class="header-title">Hello world</h1>
+  <p class="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, doloribus.</p>
+  <svg class="" width="50px" height="50px">
+    <use href="./images/icons.svg#icon-ice-cream"></use>
+  </svg>
 </header>
