--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <section class="advantages">
-  <div class="container advantages__container">
+  <div class="container">
     <h2 class="visually-hidden">advantages</h2>
     <ul class="advantages__blok">
       <li class="advantages__element">
