--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -3,17 +3,17 @@
   padding-top: 40px;
   padding-bottom: 100px;
 }
-.advantages__container {
-  padding-left: 20px;
-  padding-right: 70px;
-  @media screen and (min-width: 768px) {
-    padding-left: 35px;
-  }
-  @media screen and (min-width: 1280px) {
-    padding-left: 115px;
-    padding-right: 115px;
-  }
-}
+// .advantages__container {
+//   padding-left: 20px;
+//   padding-right: 70px;
+//   @media screen and (min-width: 768px) {
+//     padding-left: 35px;
+//   }
+//   @media screen and (min-width: 1280px) {
+//     padding-left: 115px;
+//     padding-right: 115px;
+//   }
+// }
 .advantages__blok {
   @media screen and (min-width: 768px) {
     display: flex;
