Header comment address

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container header__container">
     <div class="header__backdrop is-hidden" data-modal>
       <nav class="header__menu" data-menu>
-        <button class="header__menu--button">
+        <button class="header__menu--button" type="button">
           Buy now
           <svg
             class="btn-list__icon"
@@ -13,7 +13,7 @@
           >
             <path
               d="m1.42 1 4.282 4L1.42 9"
-              stroke="#D41443"
+              stroke="var( --primary-text)"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
@@ -23,19 +23,19 @@
         <ul class="header__nav">
           <li><a class="header__list" href="">Home</a></li>
           <li><a class="header__list" href="">About us</a></li>
-          <li><a class="header__list" href="#How">How it&#39;s made?</a></li>
+          <li><a class="header__list" href="#how">How it&#39;s made?</a></li>
           <li><a class="header__list" href="">Our products</a></li>
           <li><a class="header__list" href="">Contact</a></li>
         </ul>
       </nav>
     </div>
     <button type="button" class="header__button is-open" aria-expanded="false" data-header__button>
-      <svg width="20" height="20" aria-label="mobil menu ">
+      <svg width="20" height="20" aria-label="mobile menu ">
         <use class="header__icon--cross" href="./images/icons.svg#icon-cross"></use>
         <use class="header__icon--menu" href="./images/icons.svg#icon-burger"></use>
       </svg>
     </button>
-    <button class="header__nav--button">
+    <button class="header__nav--button" type="button">
       Buy now
       <svg
         class="btn-list__icon"
@@ -46,7 +46,7 @@
       >
         <path
           d="m1.42 1 4.282 4L1.42 9"
-          stroke="#D41443"
+          stroke="var(--primary-text)"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
@@ -67,19 +67,19 @@
           width="200"
         />
       </a> -->
-    <h2 class="header__taitle">
+    <h2 class="header__title">
       ice cream made with
-      <span class="header__taitle--emphasis">passion</span>
+      <span class="header__title--emphasis">passion</span>
     </h2>
     <div class="header__button--block">
-      <button class="header__button--first" href="">Products</button>
-      <button href="#How" class="header__button--second">How it&#39;s made?</button>
+      <button class="header__button--first" href="" type="button">Products</button>
+      <button href="#how" class="header__button--second" type="button">How it&#39;s made?</button>
     </div>
     <p class="header__text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
       labore et
       <br />
-      <button type="button" class="header__btn">
+      <button type="button" class="header__btn" type="button">
         <span class="header__arrow">&#10140;</span>
       </button>
     </p>
