--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -65,8 +65,8 @@
       <span class="header__title--emphasis">passion</span>
     </h2>
     <div class="header__button--block">
-      <button class="header__button--first" href="" type="button">Products</button>
-      <button href="#how" class="header__button--second" type="button">How it&#39;s made?</button>
+      <button class="header__button--first" type="button">Products</button>
+      <button class="header__button--second" type="button">How it&#39;s made?</button>
     </div>
     <p class="header__text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
