--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -3,50 +3,89 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img srcset="../src/images/photo/vova-r@1x.jpg 1x,../src/images/photo/vova-r@2x.jpg 2x" alt="Photo of Vova Rubakha" width="85" height="85">
+          <picture>
+            <source
+              srcset="../src/images/photo/vova-r@1x.jpg 1x, ../src/images/photo/vova-r@2x.jpg 2x"
+            />
+            <img
+              src="../src/images/photo/vova-r@1x.jpg"
+              alt="Photo of Vova Rubakha"
+              width="85"
+              height="85"
+            />
+          </picture>
           <div class="text-container">
-            <p class="reviews-text">
-              A journey of a thousand miles begins with a single step.
-            </p>
-          </div class="text-container">
+            <p class="reviews-text">A journey of a thousand miles begins with a single step.</p>
+          </div>
           <h3 class="swiper-slide__title">Vova Rubakha, Ternopil, Ukraine</h3>
         </div>
         <div class="swiper-slide">
-          <img srcset="../src/images/photo/bogdan@1x.jpg 1x,../src/images/photo/bogdan@2x.jpg 2x" alt="Photo of Bogdan Mrichko"
-            width="85" height="85">
+          <picture>
+            <source
+              srcset="../src/images/photo/bogdan@1x.jpg 1x, ../src/images/photo/bogdan@2x.jpg 2x"
+            />
+            <img
+              src="../src/images/photo/bogdan@1x.jpg"
+              alt="Photo of Bogdan Mrichko"
+              width="85"
+              height="85"
+            />
+          </picture>
           <div class="text-container">
-            <p class="reviews-text">
-              Russian warship - f&#64;ck off.
-            </p>
-          </div>          
+            <p class="reviews-text">Russian warship - f&#64;ck off.</p>
+          </div>
           <h3 class="swiper-slide__title">Bogdan Mrichko, Ivano-Frankivsk, Ukraine</h3>
         </div>
         <div class="swiper-slide">
-          <img srcset="../src/images/photo/vova-b@1x.jpg 1x,../src/images/photo/vova-b@2x.jpg 2x" alt="Photo of Vova Bobanych"
-            width="85" height="85">
+          <picture>
+            <source
+              srcset="../src/images/photo/vova-b@1x.jpg 1x, ../src/images/photo/vova-b@2x.jpg 2x"
+            />
+            <img
+              src="../src/images/photo/vova-b@1x.jpg"
+              alt="Photo of Vova Bobanych"
+              width="85"
+              height="85"
+            />
+          </picture>
           <div class="text-container">
-            <p class="reviews-text">
-              Everyone must suffer. &#169; Ivan Lapa
-            </p>
+            <p class="reviews-text">Everyone must suffer. &#169; Ivan Lapa</p>
           </div>
           <h3 class="swiper-slide__title">Vova Bobanych, Striy, Ukraine</h3>
         </div>
         <div class="swiper-slide">
-          <img srcset="../src/images/photo/alex-p@1x.jpg 1x,../src/images/photo/alex-p@2x.jpg 2x" alt="Photo of Oleksandr Palamarchuk"
-            width="85" height="85">
+          <picture>
+            <source
+              srcset="../src/images/photo/alex-p@1x.jpg 1x, ../src/images/photo/alex-p@2x.jpg 2x"
+            />
+            <img
+              src="../src/images/photo/alex-p@1x.jpg"
+              alt="Photo of Oleksandr Palamarchuk"
+              width="85"
+              height="85"
+            />
+          </picture>
           <div class="text-container">
-            <p class="reviews-text">
-              Don&#39;t wish for it – work for it.
-            </p>
+            <p class="reviews-text">Don&#39;t wish for it – work for it.</p>
           </div>
           <h3 class="swiper-slide__title">Oleksandr Palamarchuk, Uman, Ukraine</h3>
         </div>
         <div class="swiper-slide">
-          <img srcset="../src/images/photo/alex-d@1x.jpg 1x,../src/images/photo/alex-d@2x.jpg 2x" alt="Photo of Oleksandr Domanskyi"
-            width="85" height="85">
+          <picture>
+            <source
+              srcset="../src/images/photo/alex-d@1x.jpg 1x, ../src/images/photo/alex-d@2x.jpg 2x"
+            />
+            <img
+              src="../src/images/photo/alex-d@1x.jpg"
+              alt="Photo of Oleksandr Domanskyi"
+              width="85"
+              height="85"
+            />
+          </picture>
           <div class="text-container">
             <p class="reviews-text">
-              Always code as if the person supporting it, is a killer-psychopath, who knows where you live...
+              Always code as if the person supporting it, is a killer-psychopath, who knows where
+              you live...
             </p>
           </div>
           <h3 class="swiper-slide__title">Oleksandr Domanskyi, Odesa, Ukraine</h3>
@@ -62,7 +101,7 @@
     <script>
       var swiper = new Swiper('.mySwiper', {
         spaceBetween: 30,
-        centeredSlides: true,        
+        centeredSlides: true,
         autoplay: {
           delay: 2500,
           disableOnInteraction: false,
@@ -71,7 +110,7 @@
         pagination: {
           el: '.swiper-pagination',
           clickable: true,
-        },        
+        },
       });
     </script>
   </div>
