--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,7 @@
 <section class="gallery">
+  <h2 class="gallery__title visually-hidden">Gallery</h2>
   <div class="container">
-    <picture class="gallery__image" >
+    <picture class="gallery__image">
       <source
         srcset="
           ./images/desktop/colage-desktop-1x.jpg 1x,
